Fixed cards not showing aligned in a single row

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,8 @@ h3 {
 }
 .app-h2 {
   font-size: 25px;
-  margin-top: 20px;
+  text-align: left;
+  margin: 10px 15px;
 }
 .footer-heading {
   font-family: "Aclonica", sans-serif;
@@ -72,6 +73,8 @@ h3 {
 }
 .app-card {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
+  border-radius: 15px;
+  overflow: hidden;
 }
 .footer-info {
   background-color: var(--dark-color);
@@ -125,14 +128,14 @@ footer i {
 }
 .app-links a {
   border-radius: 4px;
-  padding: 20px 15px;
+  padding: 10px 10px;
   text-decoration: none;
   text-transform: capitalize;
-  margin-left: 0px;
+  min-width: 100%;
+  display: inline-block;
 }
 .app-links {
-  margin-top: 30px;
-  margin-bottom: 45px;
+  margin: 15px 15px;
 }
 
 .contact-link,
@@ -198,7 +201,7 @@ footer i {
   height: 300px;
   object-position: top;
   object-fit: cover;
-  padding: 8px;
+  border-radius: 10px 10px 0px 0px;
   box-shadow: var(--box-shadow);
   margin-bottom: 0px;
 }
@@ -222,6 +225,32 @@ footer i {
 #about-main-heading {
   display: none !important;
 }
+/* Contact form styling*/
+.form-container {
+  width: 100%;
+  max-width: 600px;
+  margin-top: 20px;
+  padding: 0 20px;
+}
+
+.contact form {
+  align-items: center;
+  max-width: 600px;
+  text-align: center;
+}
+
+form .input-box {
+  display: flex;
+  justify-content: space-between;
+}
+.input-box .input-field {
+  width: 48.5%;
+}
+.contact-section {
+  text-align: center;
+}
+/* Autotype professions animations */
+
 .auto-type span {
   position: relative;
 }
